// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValueDisplay should render the component with onEditClick callback props 1`] = `
<DocumentFragment>
  <div
    class="p-4 w-full flex flex-row border-opacity-5 justify-between items-center border border-gray-100 bg-white drop-shadow-keyValueDisplay"
  >
    <span
      class="drop-shadow-none"
    >
      Key
    </span>
    <div
      class="flex flex-row justify-end items-center"
    >
      <span
        class="drop-shadow-none"
      >
        Value
      </span>
      <button
        class="pl-2 bg-transparent"
      >
        <img
          alt="Edit"
          data-nimg="1"
          decoding="async"
          height="40"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
          style="color: transparent;"
          width="40"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`KeyValueDisplay should render the component without onEditClick callback props 1`] = `
<DocumentFragment>
  <div
    class="p-4 w-full flex flex-row border-opacity-5 justify-between items-center border border-gray-100 bg-white drop-shadow-keyValueDisplay"
  >
    <span
      class="drop-shadow-none"
    >
      Key
    </span>
    <div
      class="flex flex-row justify-end items-center"
    >
      <span
        class="drop-shadow-none"
      >
        Value
      </span>
    </div>
  </div>
</DocumentFragment>
`;
